--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -11,6 +11,6 @@
 
 
     <script src="./7kyu.js"></script>
-     <script src="./7kyu-spoonerism"></script>
+     <script src="./7kyu-SpoonerizeMe.js"></script>
 </body>
 </html>
