--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -12,5 +12,6 @@
 
     <script src="./7kyu.js"></script>
      <script src="./7kyu-SpoonerizeMe.js"></script>
+     <script src="./7kyu-testing123.js"></script>
 </body>
 </html>
