Solved: 7kyu-Exes and Ohs

--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -13,5 +13,6 @@
     <script src="./7kyu.js"></script>
      <script src="./7kyu-SpoonerizeMe.js"></script>
      <script src="./7kyu-testing123.js"></script>
+     <script src="./7kyu-exes-and-ohs.js"></script>
 </body>
 </html>
