--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -12,5 +12,6 @@
 
     <script src="./8kyu.js"></script>
     <script src="./8kyu-is-it-even.js"></script>
+    <script src="./8kyu-cockroachseries-4.js"></script>
 </body>
 </html>
