7kyu- Easy wallpaper

--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -14,5 +14,6 @@
      <script src="./7kyu-SpoonerizeMe.js"></script>
      <script src="./7kyu-testing123.js"></script>
      <script src="./7kyu-exes-and-ohs.js"></script>
+     <script src="./7kyu-easy-wallpaper.js"></script>
 </body>
 </html>
