7yku-unscrambled-egg solved
within a minute

--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -15,5 +15,6 @@
      <script src="./7kyu-testing123.js"></script>
      <script src="./7kyu-exes-and-ohs.js"></script>
      <script src="./7kyu-easy-wallpaper.js"></script>
+     <script src="./7kku-unscrambled-eggs.js"></script>
 </body>
 </html>
