--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -13,5 +13,6 @@
     <script src="./8kyu.js"></script>
     <script src="./8kyu-is-it-even.js"></script>
     <script src="./8kyu-cockroachseries-4.js"></script>
+    <script src="./8kyu-pythagorian-triple.js"></script>
 </body>
 </html>
