7kyu-mathemagic.js added

--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -16,5 +16,6 @@
      <script src="./7kyu-exes-and-ohs.js"></script>
      <script src="./7kyu-easy-wallpaper.js"></script>
      <script src="./7kku-unscrambled-eggs.js"></script>
+     <script src="./7kyu-mathemagics.js"></script>
 </body>
 </html>
