7kyu-Next-Pallindromic-Number

--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -17,5 +17,6 @@
      <script src="./7kyu-easy-wallpaper.js"></script>
      <script src="./7kku-unscrambled-eggs.js"></script>
      <script src="./7kyu-mathemagics.js"></script>
+     <script src="./7kyu-next-pallindromic-number.js"></script>
 </body>
 </html>
