7kyu - Find the Capital

--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>7kyu - Challenges</title>
 </head>
-<body>
+<>
     <h1>7kyu - Challenges</h1>
 
 
@@ -18,5 +18,6 @@
      <script src="./7kku-unscrambled-eggs.js"></script>
      <script src="./7kyu-mathemagics.js"></script>
      <script src="./7kyu-next-pallindromic-number.js"></script>
+     <script src="./7kyu-find-the-capitals.js"></script>
 </body>
 </html>
