--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -14,5 +14,6 @@
     <script src="./8kyu-is-it-even.js"></script>
     <script src="./8kyu-cockroachseries-4.js"></script>
     <script src="./8kyu-pythagorian-triple.js"></script>
+    <script src="./8kyu-Grasshopper-Messi-Goals-Function.js"></script>
 </body>
 </html>
