6kyu-Stop gninnipS My sdroW!.js added

--- a/6kyu/index.html
+++ b/6kyu/index.html
@@ -12,5 +12,6 @@
 
     <script src="./6kyu.js"></script>
     <script src="./6kyu-break-camelcase.js"></script>
+    <script src="./6kyu-Stop gninnipS My sdroW!.js"></script>
 </body>
 </html>
