--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -19,5 +19,6 @@
      <script src="./7kyu-mathemagics.js"></script>
      <script src="./7kyu-next-pallindromic-number.js"></script>
      <script src="./7kyu-find-the-capitals.js"></script>
+     <script src="./7kyu-Two-to-One.js"></script>
 </body>
 </html>
