--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -20,5 +20,6 @@
      <script src="./7kyu-next-pallindromic-number.js"></script>
      <script src="./7kyu-find-the-capitals.js"></script>
      <script src="./7kyu-Two-to-One.js"></script>
+     <script src="7kyu-Number-of-people-in-the-bus.js"></script>
 </body>
 </html>
