8kyu-power-of-2.js added

--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -15,5 +15,6 @@
     <script src="./8kyu-cockroachseries-4.js"></script>
     <script src="./8kyu-pythagorian-triple.js"></script>
     <script src="./8kyu-Grasshopper-Messi-Goals-Function.js"></script>
+    <script src="8kyu-Power-of-2.js"></script>
 </body>
 </html>
