6kyu-Hamming-distance.js added

--- a/6kyu/index.html
+++ b/6kyu/index.html
@@ -13,5 +13,6 @@
     <script src="./6kyu.js"></script>
     <script src="./6kyu-break-camelcase.js"></script>
     <script src="./6kyu-Stop gninnipS My sdroW!.js"></script>
+    <script src="./6kyu-Hamming-distance.js"></script>
 </body>
 </html>
