7kyu-Find the middle element.js added

--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -21,5 +21,6 @@
      <script src="./7kyu-find-the-capitals.js"></script>
      <script src="./7kyu-Two-to-One.js"></script>
      <script src="7kyu-Number-of-people-in-the-bus.js"></script>
+     <script src="7kyu-Find the middle element.js"></script>
 </body>
 </html>
