7kyu-Sum-of-minimums.js solved successfully

--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -22,5 +22,6 @@
      <script src="./7kyu-Two-to-One.js"></script>
      <script src="7kyu-Number-of-people-in-the-bus.js"></script>
      <script src="7kyu-Find the middle element.js"></script>
+     <script src="7kyu-Sum-of-minimums.js"></script>
 </body>
 </html>
